# obatcher_ds

./: .gitignore  .gitmodules  Dockerfile  README.md  dune  dune-project  obatcher_ds.opam  paper-bench.py  requirements.txt  utils.py
benchmark/: Makefile  avl_50_50_results.csv  avl_90_10_results.csv  avl_insert_only_results.csv  avl_search_only_results.csv  avlclean.ml  avltree.ml  avltreefunctor.ml  bench.ml  btree.ml  datalog_bench.ml  dune  new-trees.ipynb  orderedlinkedlist.ml  paper-bench.ipynb  rb_50_50_results.csv  rb_90_10_results.csv  rb_insert_only_results.csv  rb_search_only_results.csv  rbclean.ml  rbfunctor.ml  rbtree.ml  rbtreefunctor.ml  skiplist.ml  timing.ml  treap.ml  treap_50_50_results.csv  treap_90_10_results.csv  treap_insert_only_results.csv  treap_search_only_results.csv  treapclean.ml  treapfunctor.ml  util.ml  utils.py  veb_50_50_results.csv  veb_90_10_results.csv  veb_insert_only_results.csv  veb_search_only_results.csv  vebtree.ml  xfast.ml  (+5 more)
lib/: avl.ml  avlfunctor.ml  avlgeneral.ml  avltree.ml  binarysplitjoin.ml  btree.ml  dune  exposerepair.ml  lazy_slist.ml  orderedlinkedlist.ml  rbclean.ml  rbfunctor.ml  rbgeneral.ml  rbtree.ml  skiplist.ml  sort.ml  splitjoin.ml  splitjoinclean.ml  treap.ml  treapclean.ml  treapgeneral.ml  veb.ml  vebgeneral.ml  veblazy.ml  vebtree.ml  xfast.ml  yfast.ml  yfast_array.ml
results/: .gitignore  datalog-plot.tex  search-plots.tex
test/: dune  test_avlfunctor.ml  test_avltree.ml  test_orderedlinkedlist.ml  test_rbfunctor.ml  test_rbtree.ml  test_treap.ml  test_vebtree.ml  test_xfast.ml  test_yfast.ml
