(test
 (libraries obatcher_ds)
 (name test_avltree)
 (modules test_avltree))

(test
 (libraries obatcher_ds)
 (name test_rbtree)
 (modules test_rbtree))

(test
 (libraries obatcher_ds)
 (name test_treap)
 (modules test_treap))

(test
 (libraries obatcher_ds)
 (name test_orderedlinkedlist)
 (modules test_orderedlinkedlist))

(test
 (libraries obatcher_ds)
 (name test_avlfunctor)
 (modules test_avlfunctor))

; (test
;  (libraries obatcher_ds)
;  (name test_avltree_par)
;  (modules test_avltree_par))